# pynapple

./: MANIFEST.in  README.rst  setup.cfg  setup.py
shell_scripts/: script2.sh
