[metadata]
name = pynapple
version = attr: pynapple.__version__
description = A project with <3 in python requires metadata
long_description = file: README.rst
url = https://github.com/wimglenn/pynapple
author = Wim Glenn
author_email = hey@wimglenn.com
license = MIT

[options]
packages = find:
python_requires = <3
